# kpd-assistant

./: .gitignore  README.md  pyproject.toml
kpd_assistant/: faq.py  prompt.py  start_api.py  start_bot.py
kpd_assistant/api/: api.py  security.py
kpd_assistant/bot/: bot.py  faq.py  info.py
kpd_assistant/lib/: config.py  vault_client.py
